all action links created html

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Articles#edit</h1>
-<p>Find me in app/views/articles/edit.html.erb</p>
+<h1>Edit Article</h1>
+
+<% if @article.errors.any? %>
+  <h2>validation errors from article</h2>
+  <ul>
+  	<% @article.errors.full_messages.each do |msg| %>
+  	  <li><%= msg %></li>
+  	<% end %>
+  </ul>
+<% end %>
+
+<%= form_for @article do |f| %>
+ <p>
+ 	<%= f.label :title%></br>
+ 	<%= f.text_field :title%>
+ </p>
+ <p>
+ 	<%= f.label :description%></br>
+ 	<%= f.text_area :description %>
+ </p>
+ <%= f.submit%>
+<% end %>
+
+<%= link_to "back to article listing", articles_path%>
