--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>Articles index</h1>
+<%= link_to "new article", new_article_path%>
+<table>
+	<tr>
+		<th>Title</th>
+		<th>Description</th>
+	</tr>
+	<% @articles.each do |article|%>
+	 <tr>
+	 	<td><%= article.title%></td>
+	 	<td><%= article.description%></td>
+	 	<td><%= link_to "edit", edit_article_path(article)%></td>
+	 	<td><%= link_to "show", article_path(article)%></td>
+	 </tr>
+	<% end %>
+</table>
+
