--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,6 @@
 
 <p>title: <%= @article.title%></p>
 <p>description: <%= @article.description%></p>
+
+<%= link_to "edit article ", edit_article_path(@article)%> |
+<%= link_to "back to article listing", articles_path%>
