--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,9 @@
 
   <body>
 
-  	<% flash.each do |name,msg|%>
-	  	<ul>
-	  		<li><%= msg %></li>
-	  	</ul>
-  	<% end %>
-  	
+    <%= render 'layouts/messages'%>
+
+
     <%= yield %>
   </body>
 </html>
