--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Pages home</h1>
-<%= link_to "About", about_path %>
+<%= link_to "Articles all", articles_path %> | <%= link_to "About", about_path %>
