adding navigation footer home image and css code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
 
   <body>
 
+    <%= render 'layouts/navigation'%>
+
     <%= render 'layouts/messages'%>
 
-
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <%= render 'layouts/footer'%>
   </body>
 </html>
