--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages home</h1>
-<%= link_to "Articles all", articles_path %> | <%= link_to "About", about_path %>
+<div class="center jumbotron">
+  <h2>alpha blog</h2>
+  <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg btn-xlg" %>
+</div>
