adding style form new and edit bootstrap code

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Articles show</h1>
+<h1 align = "center">Articles show</h1>
 
 <p>title: <%= @article.title%></p>
 <p>description: <%= @article.description%></p>
