--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,6 +45,14 @@ $navbar-default-bg: #4367b1;
   background: red;
 }
 
+.description {
+  margin: 0;
+}
+.article-actions{
+  border-top: 1px solid #eaeaea;
+  padding-top: 10px;
+
+}
 .footer {
   margin-top: 30px;
   border-top: 1px solid #eaeaea;
