--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,13 @@
-<h1 align = "center">Articles show</h1>
-
-<p>title: <%= @article.title%></p>
-<p>description: <%= @article.description%></p>
-
-<%= link_to "edit article ", edit_article_path(@article)%> |
-<%= link_to "back to article listing", articles_path%>
+<h2 align = "center">Title: <%= @article.title%></h2>
+<div class="well col-sm-8 col-sm-offset-2">
+  <h4 class="center description"><strong>Description</strong></h4>
+  <hr>
+  <%=simple_format(@article.description)%>
+  <div class="article-actions">
+    <%= link_to "edit article ", edit_article_path(@article),class: "btn btn-primary btn-xs"%>
+    <%= link_to "Delete Article", article_path(@article),
+                                  method: :delete, data: {confirm: "are you sure"},
+                                  class: "btn btn-danger btn-xs"%>
+    <%= link_to "back to article listing", articles_path,class: "btn btn-success btn-xs"%>
+  </div>
+</div>
