--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,6 +53,16 @@ $navbar-default-bg: #4367b1;
   padding-top: 10px;
 
 }
+.article-title{
+  text-decoration: none;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.article-body{
+  border-top: 1px solid #eaeaea;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 .footer {
   margin-top: 30px;
   border-top: 1px solid #eaeaea;
