--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,17 @@
-<h1>Articles index</h1>
-<%= link_to "new article", new_article_path%>
-<table>
-	<tr>
-		<th>Title</th>
-		<th>Description</th>
-	</tr>
+<h1 align = "center">Articles index</h1>
 	<% @articles.each do |article|%>
-	 <tr>
-	 	<td><%= article.title%></td>
-	 	<td><%= article.description%></td>
-	 	<td><%= link_to "edit", edit_article_path(article)%></td>
-	 	<td><%= link_to "show", article_path(article)%></td>
-	 	<td><%= link_to "delete",article_path(article), method: :delete, data: {confirm: "Are you sure"}%></td>
-	 </tr>
+	<div class="well well-lg">
+		<div class="article-title">
+			<%= link_to article.title, article_path(article) %>
+		</div>
+		<div class="article-body">
+			<%= truncate(article.description, length: 100)%>
+		</div>
+		<div class="article-actions">
+	    <%= link_to "edit article ", edit_article_path(article),class: "btn btn-primary btn-xs"%>
+	    <%= link_to "Delete Article", article_path(article),
+	                                  method: :delete, data: {confirm: "are you sure"},
+	                                  class: "btn btn-danger btn-xs"%>
+	  </div>
+	</div>
 	<% end %>
-</table>
-
