--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,11 @@ $navbar-default-bg: #4367b1;
   padding-top: 10px;
   padding-bottom: 10px;
 }
+.showdetails{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+  padding-top: 10px; 
+}
 .footer {
   margin-top: 30px;
   border-top: 1px solid #eaeaea;
