--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
-<h1 align = "center">SignUp page</h1>
+<h1 align = "center">Edit user</h1>
 <%= render "shared/errors", obj: @user%>
 <%= render "form" %>
